--- a/demoAppDev/app/styles/chat.less
+++ b/demoAppDev/app/styles/chat.less
@@ -38,7 +38,6 @@
 
 .page-content.chat {
     padding-top: 3rem;
-    max-height: 65vh;
 }
 
 .chat-content {
